fix safari ios scrollbar

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -43,8 +43,7 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
         &::-webkit-scrollbar {
-            width: 0;
-            height: 0;
+            display: none;
         }
     }
 }
